完善记录代码量的工具